# MonteCarloScattering

./: .gitignore  .gitmodules  BuildLog  CMakeLists.txt  ErrorLog  MCScattering.f90  README.md  SGArray.f90  class_boltzmanndistribution.mod  class_getscattereddirections.mod  getInputs.f90  getdirections.inp  getdirectionsv3.f90  getposinprobe.inp  getposinprobev2.f90  getspeeds.f90  getspeeds.inp  inputs.inp  mirrorspotpos.inp  mirrorspotposx.inp  mirrorspotposy.inp  modules.f90  sheetIntersection.inp  sheetintersection.f90  sheetintersectionv2.f90  test.f90  tests.f90
Constants/: mathConstants.f90
Imaging Macros/: ImportSeriesTextImages.txt
Inputs/: chamberDimensions.inp  directionInputs.inp  experimentalInputs.inp  imagingInputs.inp  input_values - standard copy.cfg  input_values - standard.cfg  input_values.cfg  inputs.cfg  inputs.inp  mathParameters.inp  timingInputs.inp  unform angles_1500 mps scattering speed_0 deg.cfg
Maths/: BoltzmannDistribution.f90  directionMath.f90  getDirections.f90  getSpeeds.f90  getscattereddirections.f90  imaging.f90  sheetIntersection.f90
Modules/: getDirections.f90  getInputs.f90  getSpeeds.f90  imaging.f90  sheetIntersection.f90  testingMods.f90
Python Scripts/: MCS_GUI.py
ROI Analysis/: roi.f90
Real Images/: 01102020_4_Q11_IF  02032020_1_Q11_IF  09032021_Q12_Instrument Function_SUM_00  16022021_Q12_Squalane_SUM_094  16022021_Q12_Squalane_SUM_126  18112020_1_Q11_IB TOF Profile_ChC068  18112020_4_Q11_IF
Test Scripts/: getposinprobeNoSheet.f90  getposinprobeWideSheet.f90  longitudinalProfile.f90  longitudinalProfileNoSheet.f90  testImaging.f90  testImaging2.f90  testPart2  testParticleGeneration.f90  testParticleGeneration2.f90  transverseProfile.f90  transverseProfileNoSheet.f90
Test Scripts/Real Images/: 01102019_1_Q11_IB TOF Profile_ChC102
Testing and Analysis/: 02112020_1_Q11_IB TOF Profile_ChC100  06112019_1_Q11_IB TOF Profile_ChC106  18112020_1_Q11_IB TOF Profile_ChC092  45transverseprofile.f90  Image  9.txt  Image 45.txt  Image 49.txt  flux.f90  gausstest.f90  multigauss.f90  run.sh  savgol.py  sg_smooth.f90  smoothedIF.txt  softspheretest.f90  test.f90  transverseProfile.f90  voigttest.f90
Testing and Analysis/Image Manipulation/: if_deconv.f90
Testing and Analysis/ROI Analysis/: least_squares_subtraction.f90  lss.f90  lss_golden.f90  lss_scan.f90  mbtest.f90  pathfinder.py  roi.f90  roi_arc.f90  roi_arc_lss.f90  roi_real.f90  roiv2.f90  transverseProfile.f90  transverseProfile.txt
Testing and Analysis/python/: AnalysisCodeAll_v1.py  AnalysisCodeProblemRunsRemoved_v1.py  AnalysisCodeROI1_v1.py  AnalysisCodeSensitiveArea_v1.py  AnalysisCodeV4removed_v1.py  AnalysisCode_Ne_v1only_v1.py  AnalysisCode_v1.py  AnalysisCodev8_v1.py  PCHIP_test.py  analysis-tools.py  doppler_calc.py  file_line_edit.py  filemanagement.py  image_gen.py  image_integral.py  multiply_images.py  pchip.py  raw.py  roi.py  run.py  slice.py  tof_peak_finder.py
src/: MCScattering.f90  SGArray.f90  directions.f90  getDirections.f90  getInputs.f90  getSpeeds.f90  imaging.f90  inputs.f90  inputs.i90  m_config.f90  mathConstants.f90  pchip.f90  sheetIntersection.f90  sheet_intersection.f90  speeds.f90  testingMods.f90
